<resources>
    <string name="app_name">KotlinFireChat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create account</string>
    <string name="spread_love">Meet millions people around you</string>
    <string name="sign_in">Sign in</string>
    <string name="you_don_t_have_an_account">You are new here ?</string>
    <string name="already_member">Already member ?</string>
    <string name="create_your_account_today_and_meet_lot_of_people_around_you">Create your account today and meet lot of people around you</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
