<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".home.WelcomeFragment">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_heart" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_backgroung_img" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/spread_love"
                android:textAppearance="@style/QuickSandRegular"
                android:textSize="@dimen/size_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:paddingBottom="10dp"
                android:text="@string/create_account"
                android:textAppearance="@style/QuickSandMedium"
                android:textSize="@dimen/size_30"
                app:backgroundTint="@color/colorLogo"
                app:layout_constraintBottom_toTopOf="@+id/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:layout_marginBottom="@dimen/dimen_24"
                android:paddingBottom="@dimen/dimen_8"
                android:text="@string/sign_in"
                android:textAppearance="@style/QuickSandMedium"
                android:textColor="@color/colorLogo"
                android:textSize="@dimen/size_30"
                app:backgroundTint="@color/colorSoftPink"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>